# react-native-esim-manager

./: .actrc  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .release-it.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.test  PROJECT_OVERVIEW.md  README.md  RELEASE_PROCESS.md  SECURITY.md  eslint.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  react-native-esim-manager.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/: branch-strategy.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pre-release.yml  publish.yml  release.yml
android/: CMakeLists.txt  README.md  build.gradle  cpp-adapter.cpp  gradle.properties  proguard-rules.pro  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/esimmanagerexample/: MainApplication.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: EsimManagerTurbo.cpp  EsimManagerTurbo.h
android/src/main/java/com/esimmanager/: EsimManagerModule.java  EsimManagerPackage.java  EsimManagerTurboPackage.java  NativeEsimManagerSpec.java
android/src/newarch/java/com/esimmanager/: EsimManagerTurboModule.java  NativeEsimManagerSpec.java
example/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
example/android/: settings.gradle
ios/: EsimManager.h  EsimManager.m  EsimManager.mm
scripts/: pre-push-check.sh  setup-act.md  setup-branch-protection.md  setup-branch-rules.sh  test-ci-locally.sh
src/: NativeEsimManager.ts  index.ts
(+14 files in other folders)
